--- a/README
+++ b/README
@@ -1,6 +1,1 @@
-This is a placeholder README for the documents in this repository.
-Any file placed in the root directory of your repository named README will be displayed by github on the project's homepage.
-
-Let's explain what these documents are, and why this repository exists.
-
-How to fork and edit these documents.
+This is a place for "official" documents created by the New York City General Assembly.
